# medium_rag

./: README.md  ingest.py  main.py  mediumblog1.txt  pyproject.toml
